--- a/Rapport/content/abstract.tex
+++ b/Rapport/content/abstract.tex
@@ -46,6 +46,9 @@ of the application is discussed. Finally, options for further development of the
 It is concluded that the developed Pan \& Tilt System
 is not always able to accurately track the parabolic movement of the clay target while
 meeting the time requirements of the competition.
+However, in all the experiments with the optimized system,the measurements show
+that the system is able to accurately track the
+clay target for 0.42 seconds after the peak of it's parabolic movement.
 
 %%%
 %%%
