Så burd det virke..

--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -4,15 +4,17 @@
 %lstlistings distance to text
 \lstset{aboveskip=0pt,belowskip=-10pt} %is this too agressive?
 \begin{document}
-\pagenumbering{Roman}
+
 \include{./content/forside}
 %\cleardoublepage
+\clearpage
+\cleardoublepage
 \clearpage
 
 % Disable indentation
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0.7\baselineskip}%
-
+\pagenumbering{Roman}
 \include{./content/abstract}
 \include{./content/templates} % Kan bruges til copy paste ind i rapport for forskellige outputs.....
 \include{./content/ansvarsomraader}
