forslag til pid-tuning indledning

--- a/Rapport/content/regulering.tex
+++ b/Rapport/content/regulering.tex
@@ -1,6 +1,7 @@
 \part{Regulatorjustering}
 I denne del optimeres systemets performance ved at ændre på regulatorene for pan og tilt. 
-På mikrocontrolleren er regulatorerne implemeteret som diskrete PID-algoritmer.
+%På mikrocontrolleren er regulatorerne implemeteret som diskrete PID-algoritmer.
+På mikrocontrolleren er begge regulatorer implementeret som PID på parallelform.
 Det vurderes om det er nødvendigt med yderligere tilføjelser til regulatorerne 
 for at opnå den ønskede performance.
 Herefter vurderes PTS's performance i forhold til kravspecifikationen.
