lidt layout ændring

--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -22,5 +22,5 @@ Rapporten&/Master\_doc.pdf\\
 \todo[inline,author=Mikael]{Indhold på CD-ROM'en}
 
 
-\newpage
-\listoftodos
+% \newpage
+% \listoftodos
