--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -4,7 +4,7 @@ af f.eks. overvågningskameraer.
 Fælles for mange af sådanne trackingsystemer er, at de bruger et Pan \& Tilt System til at følge deres mål. 
 
 I dette projekt udvikles et Pan \& Tilt trackingsystem, som følger en lerdues bevægelse i 
-luften. Systemet dimensioneres til brug i en English Skeet konkurrence. Kravene til systemet analyseret i første del af rapporten. 
+luften. Systemet dimensioneres til brug i en English Skeet konkurrence. Kravene til systemet analyseres i første del af rapporten. 
 
 For at kunne designe en passende regulator til systemet skal udledes en matematisk model. Dette gøres i anden del af rapporten. 
 
