--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -5,21 +5,26 @@
 \listoffigures
 \listoftables  
 
-\subsection*{Indhold CDROM}
+\subsection*{Indhold i projektmappe}
 \begin{figure}[th!]
 \centering
 \begin{tabular}{l|l}
 Hvad&Sti\\\hline
-Rapporten&/Master\_doc.pdf\\
-&/Data/\\
-&/PIDoptimering/\\
+Rapporten&Master\_doc.pdf\\
+Koden til mikrocontrolleren &uC\\
+Biblioteker til C koden&uC/libs\\
+VHDL kode til FPGA &FPGA\\
+Test af PID &test/simulering\\
+Test af mikrocontrollerens timing&test/Test af timing uC\\
+Koordinater til koden &test/koordinater\\
 
 \end{tabular}
-\captionsetup{type=table}
-\caption*{Indhold CDROM.}
-\label{tb:CD}
+\captionsetup{type=table, width=0.6\textwidth}
+\caption*{Indhold i projektmappe. \label{tb:CD}}
 \end{figure}
-\todo[inline,author=Mikael]{Indhold på CD-ROM'en}
+
+Vores Awesome Projekt er Zipped på http://www.github.org/anbae12/Code
+% Projektmappen med indholdet beskrevet i tabel \ref{tb:CD} kan findes på linket: http://www.vapz.dk.
 
 
 % \newpage
