--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -32,11 +32,10 @@
 \counterwithin{table}{section}
 \counterwithin{equation}{section}
 
-% Tosidet margin:
-%\usepackage[inner=3cm,outer=2cm]{geometry}
-% Enkeltsidet magin: 
-\usepackage[margin=2.5cm]{geometry}
-
+% % Tosidet margin:
+\usepackage[margin=2.5cm, inner =3cm,outer =2cm]{geometry}
+% % Enkeltsidet magin: 
+% \usepackage[margin=2.5cm]{geometry}
 
 
 \usepackage{paralist}
