ansvar og appen-index

--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -28,17 +28,17 @@ De primære ansvarsområder er listet i nedenstående tabel
  \begin{tabular}{r|l}
 Navn&Opgaver/Ansvarsområder \\[6pt] \hline
 Åse&FPGA\\
-&Regulator optimering\\[6pt] \hline
+& Optimering af regulator\\[6pt] \hline
 Mikkel& FPGA\\ 
-& Regulator design\\[6pt] \hline
+& Design af regulator\\[6pt] \hline
 Mikael& Systemmodellering\\
-&Regulator design\\[6pt] \hline
+& Design af regulator\\[6pt] \hline
 Nikolaj&Mikrocontroller\\
-&Regulator optimering\\[6pt] \hline
+& Optimering af regulator\\[6pt] \hline
 Anders&Systemmodellering\\
-&Regulator optimering\\[6pt] \hline
+& Optimering af regulator\\[6pt] \hline
 Michael &Mikrocontroller\\
-&Regulator optimering\\ 
+& Optimering af regulator\\ 
 \end{tabular}     
 \caption*{Viser fordelingen af ansvarsområder.}            
 \end{table}\\~\\ 
