--- a/Rapport/content/appen.tex
+++ b/Rapport/content/appen.tex
@@ -7,3 +7,4 @@
 \include{./content/app_FPGA}
 \include{./content/Serial_Peripheral_Interface}
 \include{./content/app_uctest}
+\todo[inline,author=Mikael]{Brackets i captions skal fjernes,. så figurer ikke står i indholdsfortegnelsen.}
