--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -6,7 +6,7 @@ Kravene til systemet findes vha. reglerne for ES \citep{ES_regler}.
 
 I reglerne er givet et affyringspunkt (D), et forventet nedslagspunkt (G) og ``target crossing point'' (TCS).
 %Med antagelsen om negligerbar luftmodstand kan en kasteparabel således udregnes ved interpolation af disse tre punkter.
-Lerduens parabelbevægelse findes ved interpolation af disse tre punkter. Det antages at luftmodstanden er neglibar.
+Lerduens parabelbevægelse findes ved interpolation af disse tre punkter. Det antages at luftmodstanden er negligerbar.
 %Kasteparablen er givet ved ligning \ref{eq:ks:vektorparabel3d}, med origo som angivet på figur \ref{fig:ES}.
 %\begin{equation}
 %Pos\left( t \right) = 
@@ -24,7 +24,7 @@ Lerduens parabelbevægelse findes ved interpolation af disse tre punkter. Det an
 %Med kasteparablen er det muligt at specificere systemets betingelser yderligere:
 %Lerduens affyringshastighed og vinkel ift. xy planet kan lerduens flugt beregnes. 
 %
-Lerduens affyringshastighed og vinkel ift. xy planet blev beregnet vha. den fundne kasteparabel. 
+Lerduens affyringshastighed og vinkel ift. xy-planet blev beregnet vha. den fundne kasteparabel. 
 Lerduen affyres med en hastighed på 34,6 \([\frac{m}{s}]\) i en vinkel på \(9,1\degree\) 
 ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.}. 
 
