--- a/Rapport/content/forord.tex
+++ b/Rapport/content/forord.tex
@@ -9,7 +9,7 @@ Formålet med projektet er at kombinere semestrets forskellige fagligheder og sa
 \bigskip
 \begin{center}
 Tak til \\
-\textit{Professor Esmaeil S. Nadimi} \\ 
+\textit{Lektor Esmaeil S. Nadimi} \\ 
 for vejledning, kommentarer og feedback.
 \end{center}
 
