--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -25,6 +25,7 @@ Koordinater til koden &test/koordinater\\
 
 Vores Awesome Projekt er Zipped på http://www.github.org/anbae12/Code
 % Projektmappen med indholdet beskrevet i tabel \ref{tb:CD} kan findes på linket: http://www.vapz.dk.
+\todo[inline,author=Mikael]{Opdatér link osv.}
 
 
 % \newpage
