--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -8,13 +8,14 @@ luften. Systemet dimensioneres til brug i en English Skeet konkurrence. Kravene 
 
 For at kunne designe en passende regulator til systemet skal udledes en matematisk model. Dette gøres i anden del af rapporten. 
 
-I tredje del af rapporten diskuteres implementeringen af regulatorerne og diverse hjælpe-funktioner på mikrocontrolleren. Der beskrives også hvordan en FPGA bruges til at generere PWM-signaler og læse motorernes position. 
+I tredje del af rapporten diskuteres implementeringen af regulatorerne og diverse hjælpefunktioner på mikrocontrolleren. Der beskrives også hvordan en FPGA bruges til at generere PWM-signaler og læse motorernes position. 
 
-Inden rapporten konkluderes, beskrives justeringen/tuningen af regulatorerne. Dette er fjerde del af rapporten, som også indeholder tests af systemets endelige performance. 
+I fjerde del af rapporten beskrives justeringen af regulatorerne og tests af systemets endelige performance.
 %For at udvikle et sådant system skal passende regulatore designes og implementeres på en mikrocontroller. 
 %Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
 %En FPGA  bruges til at læse systemets position og generere ønsket PWM-signal til motorerne. 
 %Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
+Til sidst konkluderes projektet og muligheder for videre arbejde diskuteres.
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
 % \todo[inline,color = pink, author= Mikkel]{1. forsøg på indledning. \\Michael: Har ændret lidt hist og her - mangler stadig lidt arbejde}
