--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,11 +1,11 @@
 \part{Systemidentifikation}
 Denne del gennemgår den teoretiske beskrivelse af systemet.
-Design af passende regulatorer tager udgangspunkt i en teoretisk beskrivelse af PTS.
-PTS identificeres i sektion \ref{sec:matPTS} vha. målinger på motorerne samt systemets dynamik. 
+Design af passende regulatorer tager udgangspunkt i en matematisk model af PTS.
+PTS identificeres i afsnit \ref{sec:matPTS} vha. målinger på motorerne samt systemets dynamik. 
 Modellen verificeres ved sammenligning af åbensløjferesponserne for det fysiske system og den teoretiske model.
 
-I sektion \ref{sec:kontrollerdeign} diskretiseres den teoretiske model for PTS mht. design af diskret regulator.
-Den diskrete model optimeres, bl.a. ved at tilføje dødzone. 
+I afsnit \ref{sec:kontrollerdeign} diskretiseres den teoretiske model for PTS mht. design af diskret regulator.
+Den diskrete model optimeres ift. ulineariteter.
 På baggrund af de fundne diskrete overføringsfunktioner diskuteres valg af regulatortype. 
 
 Desuden gennemgås transformationen fra kartesiske koordinater til sfæriske koordinater.
