--- a/Rapport/content/konklusion.tex
+++ b/Rapport/content/konklusion.tex
@@ -14,6 +14,10 @@ I nogle af de udførte tracking-forsøg var systemet dog i stand til at følge l
 iht. kravspecifikationen,
 og i alle forsøgene fulgtes bevægelsen nøjagtigt i min. 0,42 [s] efter lerduen havde nået sit toppunkt.
 
+\section{Perspektivering}
 Det vurderes, at mere avancerede regulatortyper er nødvendige til den nøjagtige tracking af lerduen.
-
-\section{Til videre arbejde}
+\todo[inline,author=Mikael,color=red]{Flere encoderticks!!! Mega fedt!}
+\todo[inline,author=Mikael,color=red]{Mere slidstærke drivremme ELLER generelt slidstærk drivmekanisme}
+\todo[inline,author=Mikael]{Uddyb det med avancerede regulatortyper! F.eks. adaptive!}
+\todo[inline,author=Mikael]{Hvad kan man bruge skidtet til i fremtiden!?\\Snak om mere avancerede regulatortyper.\\Bedre udstyr?\\2. ordens interpolation af parabelpunkter så lerduebevægelsen kunne forudsiges.}
+\todo[inline,author=Cirkeline,color=green]{PIZZA!!!}
