--- a/Rapport/content/projekt_overblik.tex
+++ b/Rapport/content/projekt_overblik.tex
@@ -6,7 +6,7 @@ Det ligger altså udenfor dette projekt at bestemme den overordnede opdeling.
 Projektoplægget stiller ydermere følgende krav til implementeringen:
 \begin{itemize}
 \itemsep1pt
-  \item Regulatorerne skal implementeres på én mikrocontrolleren.
+  \item Regulatorerne skal implementeres på en mikrocontroller.
   \item Der skal benyttes SPI-kommunikation mellem mikrocontrolleren og FPGA’en.
   \item FPGA’en skal styre PWM-signalerne til motorerne.
   \item FPGA’en skal benyttes til bestemmelse af motorernes position vha. encoderne.
