--- a/Rapport/content/Serial_Peripheral_Interface.tex
+++ b/Rapport/content/Serial_Peripheral_Interface.tex
@@ -1,4 +1,5 @@
 \section{Serial Peripheral Interface}
+\label{app:spi}
 Kommunikationen mellem mikrocontolleren og FPGA’en foregår med SPI. % (Serial Peripheral Interface). 
 SPI understøtter full-duplex kommunikation mellem en master og en eller flere slaver
 %Det er en standard hvor der bliver overført data mellem en master og en eller flere slaver. 
@@ -9,8 +10,17 @@ Opstillingen med en master og en slave kan ses på figur \ref{fig:SPImasterslave
 \begin{tikzpicture}[scale=0.8]
 \include*{./graphics/MISOMOSI}
 \end{tikzpicture}
-\caption[SPI protokol]{Skitse af SPI-kommunikation mellem mikrokontroller og FPGA.}
+\caption[SPI protokol]{Skitse af SPI-kommunikation mellem mikrocontroller og FPGA.}
 \label{fig:SPImasterslave}
+\end{figure}
+\todo[inline,author=Mikael]{Indsæt SPIfigur!}
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[scale=0.8]
+\include*{./graphics/SPIfigur}
+\end{tikzpicture}
+\caption[SPI protokol]{Skitse af SPI-kommunikation mellem mikrocontroller og FPGA.}
+\label{fig:SPIfigur}
 \end{figure}
 
 Der er fire ledninger mellem masteren og slaven: Slave Select (SS), Serial Clock (SCLK), Master Output Slave Input (MOSI) og Master Input Slave Output (MISO). SS bruges til at vælge hvilken slave der skal overføres data til/fra. Den kan også sammenlignes med en chip select. SCLK generes af masteren; SS, MOSI og MISO kører synkront med dette signal.
