--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -8,7 +8,7 @@ address={hollywood},
 }
 
 @Book{adam,
-author     = {Adams, R. A. and Essex, C},
+author     = {Adams, R. A. and Essex, C.},
 year        ={2013},
 title          ={Calculus A Complete Course},
 edition    ={7},
