--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -43,7 +43,7 @@ Funktionaliteten der skal være på FPGA'en er at opfange outputtet fra
 Hall sensorerne og nulstille den tilhørende position.
 Dog viste det sig, at Hall sensorernes output ikke kun er højt på ét encodertick, 
 men derimod adskillige. Det er nødvendigt at FPGA'en tager højde for 
-dette. Implementeringen er beskrevet i appendix \ref{sec:fpgaappendix}.
+dette. Implementeringen er beskrevet i appendiks \ref{sec:fpgaappendix}.
 
 \subsection{Implementering på FPGA}
 På figur \ref{fig:FPGA_blok} ses et simplificeret diagram over komponenterne på FPGA'en. 
@@ -52,7 +52,7 @@ FPGA'ens chip. Pilene imellem FPGA'ens komponenter angiver retningen af
 datastrømme. Diagrammet er simplificeret ved at vise to ens komponenter som én. 
 F.eks. er der ikke én tick counter komponent på FPGA'en, men derimod to.
 Herunder følger en forklaring på hvordan de tre krav til FPGA'en er opnået. For 
-yderligere forklaring af komponenterne henvises til appendix 
+yderligere forklaring af komponenterne henvises til appendiks 
 \ref{sec:fpgaappendix}.
 \begin{figure}[!th]
 \centering
