--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -34,10 +34,10 @@ ikke må overstige 1,02\degree. I denne sammenhæng skal systemet altså stadig 
 \subsection{DC-Motor}
 To DC-motorer af typen EMG30 \citep{emgmotor}, er forbundet til systemet.
 Det antages, at motorerne kan beskrives ved samme matematiske model og samme parametre (på nær inertimomentet fra belastningen).
-Den matematiske model af DC-motoren er beskrevet i appendix \ref{sec:dcmotor},
+Den matematiske model af DC-motoren er beskrevet i appendiks \ref{sec:dcmotor},
 der også beskæftiger sig med den eksperimentelle bestemmelse af parametrene for en EMG30-motor.
 Motoren kan beskrives ved ligning \ref{eq:matVm_transient3}, hvor konstanterne \(k_1\), \(k_2\) og \(k_3\)
-er givet ved ligningerne \ref{eq:matkonstanter}. Der henvises til appendix \ref{sec:dcmotor}
+er givet ved ligningerne \ref{eq:matkonstanter}. Der henvises til appendiks \ref{sec:dcmotor}
 for yderligere forklaring af modellen.
 \begin{equation}
 	V_m\left(t\right)=k_1\cdot{}\frac{\mathrm d^2}{\mathrm d t^2} \big(\omega\left(t\right) \big)
@@ -100,7 +100,7 @@ og belastningen (inertimomentet \(J_L\) der skal roteres) er indeholdt i konstan
 % Bestemmelsen af inertimomenterne findes i afsnit \ref{sec:inertimoment}.
 
 Inertimomenterne er givet ved ligningerne \ref{eq:matinerti_tilt_pan_fak},
-som beregnet i appendix \ref{sec:inertimomentberegning}.
+som beregnet i appendiks \ref{sec:inertimomentberegning}.
 \begin{align}
 \label{eq:matinerti_tilt_pan_fak}
 \begin{split}
@@ -227,7 +227,7 @@ og i simuleringer af systemet at indsætte de tilnærmede værdier for dødzonen
 De kartesiske koordinater \(P_c=\left[x, y, z\right]\) skal transformeres til sfæriske koordinater
 \(P_s=\left[\rho \text{ ; } \phi \text{ ; } \theta\right]\), hvor \(\phi\) og \(\theta\) er vinklerne for hhv. tilt og pan, og \(\rho\) er afstanden fra PTS til lerduen.
 Til trackingen er kun \(\phi\) og \(\theta\) nødvendige.
-Positionbestemmelsen som funktion af tiden for det kartesiske koordinatsæt beskrives i appendix \ref{subsubsec:para}.
+Positionbestemmelsen som funktion af tiden for det kartesiske koordinatsæt beskrives i appendiks \ref{subsubsec:para}.
 Idet vinklerne skal bestemmes i forhold til PTS's rotationscenter og ikke koordinatsystemets oprindelige origo,
 flyttes origo til PTS's rotationscenter:
 \(PTS=[\text{19,2 ; 0 ; 0,45}]\). 
