--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -1,6 +1,6 @@
 \section{DC motoren}
 \label{sec:dcmotor}
-Dette appendix beskæftiger sig med den matematiske model af DC-motoren og bestemmelsen af motorparametrene.
+Dette appendiks beskæftiger sig med den matematiske model af DC-motoren og bestemmelsen af motorparametrene.
 \subsection{DC Motor karakteristik}
 DC Motoren kan modelleres efter diagrammet på figur \ref{fig:DCmotor}. 
 
@@ -84,7 +84,7 @@ fås ligning \ref{eq:Vm_transient3}.
  \end{equation}
 Ligning \ref{eq:Vm_transient3}, som er en lineær 2. ordens differentialligning, udgør den matematiske model af motoren.
 
-Resten af dette appendix beskriver de eksperimenter, der er blevet udført med henblik på bestemmelsen af motorparametrene.
+Resten af dette appendiks beskriver de eksperimenter, der er blevet udført med henblik på bestemmelsen af motorparametrene.
 \subsection{Eksperiment 1}
 \label{ss:eksperiment1}
 \subsubsection{Formål}
