--- a/Rapport/content/app_FPGA.tex
+++ b/Rapport/content/app_FPGA.tex
@@ -1,6 +1,6 @@
 \section{FPGA'ens komponenter}
 \label{sec:fpgaappendix}
-Dette appendix forklarer alle komponenter på FPGA'en.
+Dette appendiks forklarer alle komponenter på FPGA'en.
 Et forsimplet diagram over komponenterne på FPGA'en ses på figur \ref{fig:FPGA_blok}.
 
 
