--- a/Rapport/content/app_panandtiltparameter.tex
+++ b/Rapport/content/app_panandtiltparameter.tex
@@ -1,6 +1,6 @@
 \section{Beregning af inertimoment}
 \label{sec:inertimomentberegning}
-Dette appendix beskæftiger sig med beregningen af de teoretiske inertimomenter
+Dette appendiks beskæftiger sig med beregningen af de teoretiske inertimomenter
 for pan- og tilt-rammerne. Der henvises til figur \ref{fig:inerti_PTS}, og
 beregningerne tager udgangspunkt i rammernes mål:
 \({L_{1}} =0,292\) [m],
