--- a/Rapport/content/app_uctest.tex
+++ b/Rapport/content/app_uctest.tex
@@ -1,6 +1,6 @@
 \section{Test af mikrocontrollerens timing}
 \label{sec:uctestappendix}
-Dette appendix beskriver test af mikrocontrollerens timing. 
+Dette appendiks beskriver test af mikrocontrollerens timing. 
 Først testes afviklingstiden for SPI funktionerne, dernæst for Control-task'en. 
 
 
