--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -26,7 +26,7 @@ Lerduens parabelbevægelse findes ved interpolation af disse tre punkter. Det an
 %
 Lerduens affyringshastighed og vinkel ift. xy-planet blev beregnet vha. den fundne kasteparabel. 
 Lerduen affyres med en hastighed på 34,6 \([\frac{m}{s}]\) i en vinkel på \(9,1\degree\) 
-ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.}. 
+ift. xy-planet jf. figur \ref{fig:ES}\footnote{Beregningerne bag kasteparablen findes i appendiks \ref{sec:udregning_af_parabel}.}. 
 
 Lerduens flugt er givet i ligning \ref{eq:ks:vektorparabel3d} med origo som angivet på figur \ref{fig:ES}. 
 
@@ -42,7 +42,7 @@ Pos\left( t \right) =
  -{ 4,91\cdot t }^{ 2 }+5,473\cdot t+3,05\end{matrix} \right) [\text{m}]
 \label{eq:ks:vektorparabel3d}
 \end{equation}
-%En gennemgang af beregningerne der ligger bag kasteparablen findes i appendix \ref{sec:udregning_af_parabel}.
+%En gennemgang af beregningerne der ligger bag kasteparablen findes i appendiks \ref{sec:udregning_af_parabel}.
 
 Lerduens flugt er illustreret på figur \ref{fig:para_total}.
 Punktet D er "high house".
