--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -125,7 +125,7 @@ På FPGA'en genereres to PWM-signaler til den dobbelte H-bro ud fra to
 duty cycles.
 PWM-signalerne forstærkes af H-broen til en amplitude på 12 [V],
 der driver motorerne.
-Overføringsfunktionen for PWM-generatoren %- motorspændingsfald konvertering ønskes til reguleringen. Det 
+Overførings\-funktionen for PWM-generatoren %- motorspændingsfald konvertering ønskes til reguleringen. Det 
 modelleres som en forstærkning. 
 Duty cycle mellem -100\% og +100\% forstærkes
 til en DC-spænding mellem -12 [V] og +12 [V]. Med denne simple model ændres systemets orden ikke,
