--- a/Rapport/content/preamble.tex
+++ b/Rapport/content/preamble.tex
@@ -7,6 +7,7 @@
 \usepackage[utf8]{inputenc} 
 \usepackage{mathtools}
 \usepackage[danish]{babel}
+\usepackage{microtype}
 \usepackage[svgnames]{xcolor}
 \usepackage{newclude}
 \usepackage{siunitx}
