Tilføjelse af todoliste

--- a/Rapport/content/indholdsfortegnelse.tex
+++ b/Rapport/content/indholdsfortegnelse.tex
@@ -23,10 +23,7 @@ Koordinater til koden &test/koordinater\\
 \caption*{Indhold i projektmappe. \label{tb:CD}}
 \end{figure}
 
-Vores Awesome Projekt er Zipped på http://www.github.org/anbae12/Code
-% Projektmappen med indholdet beskrevet i tabel \ref{tb:CD} kan findes på linket: http://www.vapz.dk.
-\todo[inline,author=Mikael]{Opdatér link osv.}
+Vores porjektmappe findes på:  https://github.com/mikkeljae/SDU\_ROBTEK4\_PAN-AND-TILT
 
 
-% \newpage
-% \listoftodos
+ \listoftodos
